--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,10 +34,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 default = ["sync"]
-full = ["sync", "async", "serilization"]
+full = ["sync", "async", "serialization"]
 async = ["tokio/time", "tokio/sync", "tokio/once_cell", "tokio/rt-multi-thread", "tokio/macros", "tokio/parking_lot"]
 sync = ["crossbeam-channel"]
-serilization = ["serde", "serde/derive", "serde_json/default"]
+serialization = ["serde", "serde/derive", "serde_json/default"]
 
 [dependencies]
 atomic = "0.5.0"
